--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="back">
 <div class="img">
-<img src="./images/LoginEkran.png">
+<img src="./LoginEkran.png">
 </div>
 
 <form  class="login"> 
